--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Hernán Ibarra Mejia</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hernán Ibarra Mejia</h1>
+<img src="hernan_edinburgh.jpg" class="edinburgh" alt="Hernan in Edinburgh">
+<p>I am a BSc Maths student at The University of Sheffield. The above picture was taken in Edinburgh, during the LMS Summer School 2022.</p>
+<h2>Write-ups</h2>
+    <h3>Expository Articles</h3>
+    <ul>
+        <li>Change of basis with commutative diagrams</li>
+        <li>Sp(1) and SO(3)</li>
+        <li>Introduction to Coxeter Groups <strong>in progress</strong></li>
+        <li>Torsion classes and torsion theories <strong>in progress</strong></li>
+        <li>The Kronecker quiver <strong>in progress</strong></li>
+    </ul>
+    <h3>Solutions to Paolo Aluffi's <em>Algebra: Chapter 0</em></h3>
+    <h3>Some solutions to Terence Tao's <em>Analysis I</em></h3>
+    <ul>
+        <li>Exercise 8.5.13.</li>
+        <li>Exercise 8.5.15.</li>
+        <li>Exercise 10.1.7 (Proof of the Chain Rule).</li>
+        <li>Exercise 10.4.3.</li>
+    </ul>
+    <h3>Miscellaneous</h3>
+    <ul>
+        <li>The goat problem</li>
+    </ul>
+<h2>Slides from talks</h2>
+    <ul>
+        <li>Rigour and Automated Theorem Proving</li>
+        <li>Matrix Groups</li>
+        <li>A fun problem</li>
+    </ul>
+<h2>Code and animations</h2>
+    <h3>In Python</h3>
+    <ul>
+        <li>
+            Random walks. Annie walks around an n-sided polygon, while Anthony walks in an infinite hexagonal grid, stopping when he returns to his starting point. Code for the illustration not included (lost it, unfortunately).
+        </li>
+        <img src="random_walk.png" alt="Random walk in hexagonal grid">
+    </ul>
+    <h3>In R</h3>
+    <ul>
+        <li>Given an unordered list of points in R^2, this program orders them such that, when consecutive points are joined by a line, a polygon is formed.</li>
+        <img src="polygon.gif" alt="Animated search algorithm">
+        <li>An animation illustrating why the Cesàro sum of a convergent sequence is its limit.</li>
+    </ul>
+    <h3>In C</h3>
+        <li>Battleship!</li>
+    
 </body>
 </html>
