--- a/index.html
+++ b/index.html
@@ -11,46 +11,46 @@
 <h2>Write-ups</h2>
     <h3>Expository Articles</h3>
     <ul>
-        <li>Change of basis with commutative diagrams</li>
-        <li>Sp(1) and SO(3)</li>
-        <li>Introduction to Coxeter Groups <strong>in progress</strong></li>
-        <li>Torsion classes and torsion theories <strong>in progress</strong></li>
-        <li>The Kronecker quiver <strong>in progress</strong></li>
+        <li>Change of basis with commutative diagrams <a href="pdfs/change_of_basis.pdf" target="_blank">(pdf)</a></li>
+        <li>Sp(1) and SO(3) <a href="pdfs/sp1_so3.pdf" target="_blank">(pdf)</a></li>
+        <li>Introduction to Coxeter Groups <a href="pdfs/coxeter_groups.pdf" target="_blank">(pdf)</a> <strong>in progress</strong></li>
+        <li>Torsion classes and torsion theories <a href="pdfs/torsion_classes.pdf" target="_blank">(pdf)</a> <strong>in progress</strong></li>
+        <li>The Kronecker quiver <a href="pdfs/Kronecker_quiver.pdf" target="_blank">(pdf)</a> <strong>in progress</strong></li>
     </ul>
-    <h3>Solutions to Paolo Aluffi's <em>Algebra: Chapter 0</em></h3>
+    <h3><a href="https://github.com/HernanIbarraMejia/algebra-chapter0-solutions">Solutions to Paolo Aluffi's <em>Algebra: Chapter 0</em></a></h3>
     <h3>Some solutions to Terence Tao's <em>Analysis I</em></h3>
     <ul>
-        <li>Exercise 8.5.13.</li>
-        <li>Exercise 8.5.15.</li>
-        <li>Exercise 10.1.7 (Proof of the Chain Rule).</li>
-        <li>Exercise 10.4.3.</li>
+        <li>Exercise 8.5.13. <a href="pdfs/exercise_8_5_13.pdf" target="_blank">(pdf)</a></li>
+        <li>Exercise 8.5.15. <a href="pdfs/exercise_8_5_15.pdf" target="_blank">(pdf)</a></li>
+        <li>Exercise 10.1.7 <a href="pdfs/exercise_10_1_7.pdf" target="_blank">(pdf)</a> (Proof of the Chain Rule).</li>
+        <li>Exercise 10.4.3. <a href="pdfs/exercise_10_4_3.pdf" target="_blank">(pdf)</a></li>
     </ul>
     <h3>Miscellaneous</h3>
     <ul>
-        <li>The goat problem</li>
+        <li>The goat problem <a href="pdfs/GOAT.pdf" target="_blank">(pdf)</a></li>
     </ul>
 <h2>Slides from talks</h2>
     <ul>
-        <li>Rigour and Automated Theorem Proving</li>
-        <li>Matrix Groups</li>
-        <li>A fun problem</li>
+        <li>Rigour and Automated Theorem Proving <a href="pdfs/rigour_and_automated_theorem_proving.pdf" target="_blank">(pdf)</a></li>
+        <li>Matrix Groups <a href="pdfs/matrix_groups.pdf" target="_blank">(pdf)</a></li>
+        <li>A fun problem <a href="pdfs/fun_problem.pdf" target="_blank">(pdf)</a></li>
     </ul>
 <h2>Code and animations</h2>
     <h3>In Python</h3>
     <ul>
         <li>
-            Random walks. Annie walks around an n-sided polygon, while Anthony walks in an infinite hexagonal grid, stopping when he returns to his starting point. Code for the illustration not included (lost it, unfortunately).
+            Random walks. Annie walks around an n-sided polygon, while Anthony walks in an infinite hexagonal grid, stopping when he returns to his starting point. Code for the illustration not included (lost it, unfortunately). <a href="ants_simulation.py" target="_blank">(py)</a>
         </li>
-        <img src="random_walk.png" alt="Random walk in hexagonal grid">
+        <img src="random_walk.png" width="535" height="555" alt="Random walk in hexagonal grid">
     </ul>
     <h3>In R</h3>
     <ul>
-        <li>Given an unordered list of points in R^2, this program orders them such that, when consecutive points are joined by a line, a polygon is formed.</li>
-        <img src="polygon.gif" alt="Animated search algorithm">
-        <li>An animation illustrating why the Cesàro sum of a convergent sequence is its limit.</li>
+        <li>Given an unordered list of points in R^2, this program orders them such that, when consecutive points are joined by a line, a polygon is formed. Later I learned that this search strategy is called backtracking. <a href="polygon.Rmd" target="_blank">(Rmd)</a> </li>
+        <img src="polygon.gif" width="480" height="480" alt="Animated search algorithm">
+        <li>An animation illustrating why the Cesàro sum of a convergent sequence is its limit. <a href="cesaro_sum.R" target="_blank">(R)</a></li>
+        <img src="cesaro_sum.gif" width="480" height="480" alt="Animated Cesaro sum">
     </ul>
     <h3>In C</h3>
-        <li>Battleship!</li>
-    
+        <li>Battleship! <a href="battleship.c" target="_blank">(C)</a></li>
 </body>
 </html>
