--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Torsion classes and torsion theories <a href="pdfs/torsion_classes.pdf" target="_blank">(pdf)</a> <strong>in progress</strong></li>
         <li>The Kronecker quiver <a href="pdfs/Kronecker_quiver.pdf" target="_blank">(pdf)</a> <strong>in progress</strong></li>
     </ul>
-    <h3><a href="https://github.com/HernanIbarraMejia/algebra-chapter0-solutions">Solutions to Paolo Aluffi's <em>Algebra: Chapter 0</em></a></h3>
+    <h3>Solutions to Paolo Aluffi's <em>Algebra: Chapter 0</em> <a href="https://github.com/HernanIbarraMejia/algebra-chapter0-solutions/raw/main/Solutions/main.pdf">(pdf)</a></h3>
     <h3>Some solutions to Terence Tao's <em>Analysis I</em></h3>
     <ul>
         <li>Exercise 8.5.13. <a href="pdfs/exercise_8_5_13.pdf" target="_blank">(pdf)</a></li>
