--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <h1>Hernán Ibarra Mejia</h1>
 <hr>
+<p style="text-align: center">
 <img src="hernan_edinburgh.jpg" id="edinburgh" alt="Hernan in Edinburgh">
+</p>
 <p>I am a BSc Maths student at The University of Sheffield. The above picture was taken in Edinburgh, during the LMS Summer School 2022.</p>
 
 <p><a href="cv_hernan.pdf" target="_blank">CV</a></p>
