--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p style="text-align: center">
 <img src="hernan_edinburgh.jpg" id="edinburgh" alt="Hernan in Edinburgh">
 </p>
-<p>I am a BSc Maths student at The University of Sheffield. The above picture was taken in Edinburgh, during the LMS Summer School 2022.</p>
+<p>I am a Masters student in Mathematics at the University of Cambridge. The above picture was taken in Edinburgh, during the LMS Summer School 2022.</p>
 
 <p><a href="cv_hernan.pdf" target="_blank">CV</a></p>
 <address>
